<?xml version="1.0" encoding="utf-8"?>


<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="411sp"
    android:layout_height="match_parent"
    android:rowCount="7"
    android:columnCount="4"
    android:background="#ddd"
    android:layout_gravity="center"
    android:useDefaultMargins="true"
    app:backgroundTint="@null"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="2"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_rowSpan="2"
        android:text="@string/_0"
        android:textSize="50sp"
        android:gravity="center_vertical|end"
        android:padding="16sp"
        android:id="@+id/factor">
    </TextView>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/ce"
        android:textSize="24sp"
        android:background="@drawable/rec_button_2"
        android:id="@+id/ce">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/c"
        android:textSize="24sp"
        android:background="@drawable/rec_button_2"
        android:id="@+id/c">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/bs"
        android:textSize="24sp"
        android:background="@drawable/rec_button_2"
        android:id="@+id/bs">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="2"
        android:layout_column="3"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/slash"
        android:textSize="24sp"
        android:background="@drawable/rec_button_2"
        android:id="@+id/divide">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/_7"
        android:textSize="24sp"
        android:background="@drawable/rec_button"
        android:id="@+id/number7">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/_8"
        android:textSize="24sp"
        android:background="@drawable/rec_button"
        android:id="@+id/number8">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/_9"
        android:textSize="24sp"
        android:background="@drawable/rec_button"
        android:id="@+id/number9">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="3"
        android:layout_column="3"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/x"
        android:textSize="20sp"
        android:background="@drawable/rec_button_2"
        android:id="@+id/multiply">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/_4"
        android:textSize="24sp"
        android:background="@drawable/rec_button"
        android:id="@+id/number4">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/_5"
        android:textSize="24sp"
        android:background="@drawable/rec_button"
        android:id="@+id/number5">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/_6"
        android:textSize="24sp"
        android:background="@drawable/rec_button"
        android:id="@+id/number6">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="4"
        android:layout_column="3"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/minus"
        android:textSize="24sp"
        android:background="@drawable/rec_button_2"
        android:id="@+id/minus">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/_1"
        android:textSize="24sp"
        android:background="@drawable/rec_button"
        android:id="@+id/number1">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/_2"
        android:textSize="24sp"
        android:background="@drawable/rec_button"
        android:id="@+id/number2">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="5"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/_3"
        android:textSize="24sp"
        android:background="@drawable/rec_button"
        android:id="@+id/number3">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="5"
        android:layout_column="3"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/plus"
        android:textSize="24sp"
        android:background="@drawable/rec_button_2"
        android:id="@+id/plus">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/change"
        android:textSize="24sp"
        android:background="@drawable/rec_button_2"
        android:id="@+id/change">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/_0"
        android:textSize="24sp"
        android:background="@drawable/rec_button"
        android:id="@+id/number0">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="6"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/dot"
        android:textSize="24sp"
        android:background="@drawable/rec_button_2"
        android:id="@+id/dot">
    </Button>
    <Button
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_row="6"
        android:layout_column="3"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1"
        android:text="@string/equal"
        android:textSize="24sp"
        android:background="#bbb"
        android:id="@+id/equal">
    </Button>
</GridLayout>